IE-related fix to remove damn unwanted vertial scrollbar
git-svn-id: svn://bar.ebi.ac.uk/trunk/arrayexpress-interface@16282 2913f559-6b04-0410-9a09-c530ee9f5186

--- a/webapp/src/main/webapp/assets/stylesheets/ae_common_20.css
+++ b/webapp/src/main/webapp/assets/stylesheets/ae_common_20.css
@@ -23,6 +23,7 @@ table td.contentsarea {
 body {
 	background: #ffffff url(../images/empty.gif) fixed top;
     overflow: auto;
+    overflow-y: hidden;
 }
 
 body.dev_preview {
