--- a/webapp/src/main/webapp/assets/stylesheets/ae_files_20.css
+++ b/webapp/src/main/webapp/assets/stylesheets/ae_files_20.css
@@ -1,7 +1,3 @@
-body {
-    overflow-y: hidden;
-}
-
 #ae_contents {
     position: absolute;
     top: 57px;
